# SplitCA

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  REQUIREMENTS.md  STATUS.md  THIRD_PARTY_NOTICES.md
3rd/minisat/: CMakeLists.txt
3rd/minisat/minisat/core/: Main.cc  SolverTypes.h
3rd/minisat/minisat/simp/: Main.cc
3rd/minisat/minisat/utils/: Options.h
3rd/minisat/minisat_ext/: BlackBoxSolver.cc  BlackBoxSolver.h  Ext.cc  Ext.h  Solver.cc  Solver.h
artifacts/: README.md  representative.txt
artifacts/scripts/: run_full.sh  run_representative.sh  smoke_test.sh
experimental_results/Results_on_10_representative_instances/: result_10.csv
experimental_results/Results_on_all_instances/: result_all.csv
experimental_results/Results_on_large-scale_instances/: result_large.csv
experimental_results/Results_on_medium-scale_instances/: result_medium.csv
src/: main.cpp
src/cli/: args.cpp  args.hpp
src/generate/: expandor.cpp  expandor.hpp  optimizer.cpp  optimizer.hpp
src/io/: cnf.cpp  cnf.hpp  ddnnf.cpp  ddnnf.hpp
src/tui/: tui.cpp  tui.hpp  tui_state.hpp
src/util/: bitset.hpp  combinadic.hpp  dbg.hpp  intrusive_list.h  tuple_vector.hpp
test/: axtls.nnf  test3.sh  test4.sh
tools/: check_tuples.cpp
